chore: code analysis polish